# secret-log-checker

./: .dockerignore  .gitignore  .pyre_configuration  Dockerfile  README.md  ai-statement.md  generate_models.py  requirements.txt  run-analysis.py  tui.py
_legacy/: .pyre_configuration
_legacy/app/: example.py
_legacy/pysa-config/: base_models.pysa  generated_models.pysa  models.pysa
benchmarks/: expected.yaml  helper.py
benchmarks/seeded/demo-repo/python-agentframework-demos/: .env.sample  AGENTS.md  README.md  pyproject.toml
benchmarks/seeded/demo-repo/python-agentframework-demos/examples/: agent_evaluation_batch.py  eval_data.jsonl  eval_results.json  redis_history_provider.py  redis_viewer.py  sqlite_viewer.py
benchmarks/seeded/demo-repo/python-agentframework-demos/examples/spanish/: README.md  agent_evaluation_batch.py  redis_viewer.py  sqlite_viewer.py
benchmarks/seeded/demo-repo/python-agentframework-demos/infra/: write_dot_env.ps1
benchmarks/seeded/demo-repo/python-agentframework-demos/presentations/english/session-1/: README.md
benchmarks/seeded/demo-repo/python-agentframework-demos/presentations/english/session-2/: README.md
benchmarks/seeded/demo-repo/python-agentframework-demos/presentations/english/session-3/: README.md
benchmarks/seeded/demo-repo/python-agentframework-demos/presentations/english/session-5/: README.md
benchmarks/seeded/demo-repo/python-agentframework-demos/presentations/english/session-6/: README.md
pysa/: taint.config
pysa-config/: base_models.pysa  taint.config
results/: example.json
(+104 files in other folders)
